--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,48 @@
 version: '3.3'
 services:
-  elasticsearch:
-    container_name: elasticsearch
-    image: elasticsearch:7.17.18
-    environment:
-      - bootstrap.memory_lock=true
-      - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    ports:
-      - 9200:9200
-      - 9300:9300
-    stdin_open: true
-    tty: true
-    network_mode: bridge
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "50"
-  kibana:
-    container_name: kibana
-    image: kibana:7.17.18
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    ports:
-      - 5601:5601
-    links:
-      - elasticsearch:elasticsearch
-    depends_on:
-      - elasticsearch
-    stdin_open: true
-    tty: true
-    network_mode: bridge
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "50"
+  # elasticsearch:
+  #   container_name: elasticsearch
+  #   image: elasticsearch:7.17.18
+  #   environment:
+  #     - bootstrap.memory_lock=true
+  #     - discovery.type=single-node
+  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #   ports:
+  #     - 9200:9200
+  #     - 9300:9300
+  #   stdin_open: true
+  #   tty: true
+  #   network_mode: bridge
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "10m"
+  #       max-file: "50"
+  # kibana:
+  #   container_name: kibana
+  #   image: kibana:7.17.18
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #   ports:
+  #     - 5601:5601
+  #   links:
+  #     - elasticsearch:elasticsearch
+  #   depends_on:
+  #     - elasticsearch
+  #   stdin_open: true
+  #   tty: true
+  #   network_mode: bridge
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "10m"
+  #       max-file: "50"
   logstash:
     container_name: logstash
     image: logstash:7.17.18
@@ -55,10 +55,10 @@ services:
       - ./logstash.template.json:/usr/share/logstash/templates/logstash.template.json
     ports:
       - 5044:5044
-    links:
-      - elasticsearch:elasticsearch
-    depends_on:
-      - elasticsearch
+    # links:
+    #   - elasticsearch:elasticsearch
+    # depends_on:
+    #   - elasticsearch
     stdin_open: true
     tty: true
     network_mode: bridge
