--- a/logstash.conf
+++ b/logstash.conf
@@ -19,7 +19,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ["10.149.63.235:9200"]
     template => "/usr/share/logstash/templates/logstash.template.json"
     template_name => "logstash"
     template_overwrite => true
