--- a/filebeat.yml
+++ b/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
 - type: log
   enabled: true
   paths:
-    - /usr/share/filebeat/mylog/*.log
+    - /usr/share/filebeat/mylog/server.log
 
 output.logstash:
   hosts: ["logstash:5044"]
