--- a/logstash.conf
+++ b/logstash.conf
@@ -5,27 +5,17 @@ input {
 }
 
 filter {
-  json {
-    source => "message"
-  }
-  date{
-    match => ["timestamp", "UNIX_MS"]
-    target => "@timestamp"
-  }
-  ruby {
-    code => "event.set('indexDay', event.get('[@timestamp]').time.localtime('+09:00').strftime('%Y%m%d'))"
+  grok {
+    match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} \[%{DATA:thread}\] %{LOGLEVEL:level} %{DATA:class} - %{GREEDYDATA:message}" }
   }
 }
 
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    template => "/usr/share/logstash/templates/logstash.template.json"
-    template_name => "logstash"
-    template_overwrite => true
-    index => "logstash-%{indexDay}"
-    codec => json
+    index => "nuxeo-logs-%{+YYYY.MM.dd}"
   }
+
   stdout {
     codec => rubydebug
   }
